--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
     <artifactId>openjax</artifactId>
     <version>2.5.6-SNAPSHOT</version>
   </parent>
-  <artifactId>btree</artifactId>
+  <artifactId>binarytree</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <name>OpenJAX B-Tree</name>
+  <name>OpenJAX Binary Tree</name>
   <description>
     Binary Tree implementations.
   </description>
