--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
   <parent>
     <groupId>org.openjax</groupId>
     <artifactId>openjax</artifactId>
-    <version>2.5.6-SNAPSHOT</version>
+    <version>2.5.6</version>
   </parent>
   <artifactId>binarytree</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>OpenJAX Binary Tree</name>
   <description>
     Binary Tree implementations.
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>org.libj</groupId>
       <artifactId>util</artifactId>
-      <version>0.9.0-SNAPSHOT</version>
+      <version>0.9.0</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -67,13 +67,13 @@
     <dependency>
       <groupId>org.libj</groupId>
       <artifactId>console</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.libj</groupId>
       <artifactId>test</artifactId>
-      <version>0.7.2-SNAPSHOT</version>
+      <version>0.7.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
