--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
   <parent>
     <groupId>org.openjax</groupId>
     <artifactId>openjax</artifactId>
-    <version>2.5.7</version>
+    <version>2.5.8-SNAPSHOT</version>
   </parent>
   <artifactId>binarytree</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <name>OpenJAX Binary Tree</name>
   <description>
     Binary Tree implementations.
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>org.libj</groupId>
       <artifactId>util</artifactId>
-      <version>0.9.1</version>
+      <version>0.9.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
@@ -61,13 +61,13 @@
     <dependency>
       <groupId>org.libj</groupId>
       <artifactId>console</artifactId>
-      <version>0.2.0</version>
+      <version>0.2.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.libj</groupId>
       <artifactId>test</artifactId>
-      <version>0.7.3</version>
+      <version>0.7.4-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
